--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Example
         uses: lowlighter/metrics@latest
         with:
+          token: ${{ secrets.METRICS_TOKEN }}
           filename: metrics.classic.svg
           base: header, repositories
           plugin_lines: yes
