--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -31,12 +31,13 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           config_order: activity, habits, stars
-          plugin_notable: yes
-          plugin_notable_indepth: yes
-          plugin_notable_repositories: yes
           plugin_activity: yes
           plugin_activity_limit: 3
           plugin_activity_days: 0
+          plugin_habits: yes
+          plugin_habits_facts: yes
+          plugin_habits_charts: no
+          config_timezone: Asia/Kolkata
           plugin_stars: yes
           plugin_stars_limit: 3
 
