--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -13,8 +13,9 @@ jobs:
       - name: Column 1
         uses: lowlighter/metrics@latest
         with:
+          config_output: png
           config_padding: 0, +10%
-          filename: col1.metrics.svg
+          filename: col1.metrics.png
           token: ${{ secrets.METRICS_TOKEN }}
           base: header, repositories
           base_indepth: yes
@@ -26,7 +27,8 @@ jobs:
       - name: Followup
         uses: lowlighter/metrics@latest
         with:
-          filename: followup.metrics.svg
+          config_output: png
+          filename: followup.metrics.png
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_followup: yes
@@ -34,7 +36,8 @@ jobs:
       - name: Column 2
         uses: lowlighter/metrics@latest
         with:
-          filename: col2.metrics.svg
+          config_output: png
+          filename: col2.metrics.png
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           config_order: activity, habits, stars
@@ -48,7 +51,8 @@ jobs:
       - name: Stars
         uses: lowlighter/metrics@latest
         with:
-          filename: stars.metrics.svg
+          config_output: png
+          filename: stars.metrics.png
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_stars: yes
