--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,7 +1,7 @@
 name: Metrics
 on:
   # Schedule daily updates
-  schedule: [{cron: "30 1 * * *"}]
+  schedule: [{cron: "0 */12 * * *"}]
   # (optional) Run workflow manually
   workflow_dispatch:
 jobs:
@@ -60,3 +60,7 @@ jobs:
           base: ""
           plugin_stars: yes
           plugin_stars_limit: 3
+      - name: wget shell activity graph
+        uses: wei/wget@v1
+        with:
+          args: -O shell-activity-graph.png 'https://api.atuin.sh/img/Prayagmatic.png?token=80d2efe68cd91c0bdd03d611cc12c5d9787f3c2c'
