--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -64,3 +64,4 @@ jobs:
         uses: wei/wget@v1
         with:
           args: -O shell-activity-graph.png 'https://api.atuin.sh/img/Prayagmatic.png?token=80d2efe68cd91c0bdd03d611cc12c5d9787f3c2c'
+      - uses: stefanzweifel/git-auto-commit-action@v5
