--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -32,7 +32,7 @@ jobs:
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_followup: yes
-          plugin_followup_sections: user
+          plugin_followup_sections: user, repositories
           plugin_followup_indepth: yes
           plugin_followup_archived: yes
       - name: Column 2
@@ -41,7 +41,7 @@ jobs:
           filename: col2.metrics.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
-          config_order: activity, habits, stars
+          config_order: activity, habits
           plugin_activity: yes
           plugin_activity_days: 30
           plugin_activity_filter: all
@@ -50,7 +50,10 @@ jobs:
           plugin_activity_visibility: all
           plugin_habits: yes
           plugin_habits_facts: yes
-          plugin_habits_charts: no
+          plugin_habits_charts: yes
+          plugin_habits_days: 30
+          plugin_habits_from: 300
+          plugin_habits_trim: yes
           config_timezone: Asia/Kolkata
       - name: Stars
         uses: lowlighter/metrics@latest
