--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -41,7 +41,7 @@ jobs:
           filename: col2.metrics.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
-          config_order: activity, habits
+          config_order: activity, habits, stars
           plugin_activity: yes
           plugin_activity_days: 30
           plugin_activity_filter: all
@@ -50,10 +50,8 @@ jobs:
           plugin_activity_visibility: all
           plugin_habits: yes
           plugin_habits_facts: yes
-          plugin_habits_charts: yes
-          plugin_habits_days: 30
-          plugin_habits_from: 300
-          plugin_habits_trim: yes
+          plugin_stars: yes
+          plugin_stars_limit: 3
           config_timezone: Asia/Kolkata
       - name: Stars
         uses: lowlighter/metrics@latest
